deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - name: express-app
        image: seliseassesment3.azurecr.io/nodeapp:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
            requests:
              cpu: "150m"
            limits:
              cpu: "300m"
      imagePullSecrets:
      - name: registry-connection
