service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-app-service
spec:
  selector:
    app: express-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
